--- a/WebAPI_Pure/App/css/printStyle.css
+++ b/WebAPI_Pure/App/css/printStyle.css
@@ -15,11 +15,11 @@
 }
 
 p {
-    font-size: 30pt;
+    font-size: 14pt;
 }
 
 span {
-    font-size: 18pt;
+    font-size: 14pt;
 }
 
 .break {
